--- a/src/components/Organisms/Footer/Footer.module.scss
+++ b/src/components/Organisms/Footer/Footer.module.scss
@@ -93,7 +93,11 @@
     align-content: stretch;
     align-items: flex-start;
 
-    column-gap: 40px;
+    // column-gap: 40px;
+
+    > div ~ div {
+      padding-right: 40px;
+    }
   }
 
   .column-left {
@@ -107,6 +111,10 @@
     order: 0;
     flex: 1 1 auto;
     align-self: auto;
+
+    a {
+      display: none;
+    }
   }
 
   .column-right {
